# Agentic-AI

./: Copy_of_01_hello_agent.ipynb  Copy_of_04_streaming.ipynb  README.md
COLAB NOTEBOOKS/: Copy_of_01_hello_agent.ipynb
COLAB NOTEBOOKS/Getting Started/: Copy_of_03_Litellm_agent_sdk.ipynb  Copy_of_OPENAI_SDK_OPENROUTER.ipynb
COLAB NOTEBOOKS/OpenAI SDK/: 01_OpenSDK_Intro,_Agent,_Tools,_Handoff.ipynb  02_OpenSDK_Hosted_Tools,_Streaming,_Context.ipynb  03_OpenSDK_Guardrails.ipynb  04_OpenSDK_Tracing.ipynb
Cursor/ChatbotSetup/: .env  pyproject.toml
Cursor/ChatbotSetup/src/chatbotsetup/: __init__.py  chatbot.py
Cursor/hello/: README.md  pyproject.toml
Cursor/hello/src/hello/: __init__.py
Cursor/hello_chain/: README.md  pyproject.toml
Cursor/hello_chain/src/hello_chain/: __init__.py  chatbot.py
Cursor/hello_chainlit/: README.md  pyproject.toml
Cursor/test/: README.md  pyproject.toml
DATACLASSES/: 01_basic_dataclasses.py
hello/: README.md
hello_chain/: .env
hello_chain/src/hello_chain/: chatbot.py
hello_chainlit/: README.md
test/: README.md
