[project]
name = "hello-chainlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MuhammadZeeshan14", email = "96916917+MuhammadZeeshan14@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
]

[project.scripts]
hello-chainlit = "hello_chainlit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
